Fix messed up package rename
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/bcel/trunk@1747278 13f79535-47bb-0310-9956-ffa450edef68